# skriptorium-framework

./: .env.example  .gitignore  OVERNIGHT_LOG.md  README.md  llm.py  orchestrator.py  pyproject.toml  recovery.py  requirements.txt  run.py  schemas.py  style_guide.md
.github/workflows/: ci.yml
agents/: __init__.py  archivar.py  archivar_real.py  autor.py  autor_real.py  base.py  chefredakteur.py  dummies.py  faktenpruefer.py  faktenpruefer_real.py  lektor.py  lektor_real.py  lektorat.py  lektorat_real.py  quizmaster.py  revisor.py  revisor_real.py
sources/: __init__.py  chroma_reader.py
tests/: conftest.py  test_agents.py  test_build_real_cards.py  test_orchestrator.py  test_schemas.py
tools/: __init__.py  build_real_cards.py  check_card_ids.py  consolidate_topics.py  diff_archivar.py  probe_keys.py  show_outline.py  show_reviews.py  source_map.json.example
