[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skriptorium"
version = "0.1.0"
description = "Agententeam, das aus Python-Lehrmaterial ein zusammenhaengendes Fachbuch baut."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Stufe 2 – vor Aktivierung manuell installieren oder hier entkommentieren.
# llm = [
#     "anthropic>=0.40",
#     "openai>=1.50",
#     "chromadb>=0.5",
#     "python-dotenv>=1.0",
# ]

[tool.setuptools]
# Top-Level-Layout: keine src/-Hierarchie. Wir geben die Pakete explizit an,
# damit setuptools nicht über artifacts/ oder tests/ stolpert.
packages = ["agents", "tools", "sources"]
py-modules = ["orchestrator", "schemas", "recovery", "run"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
